update with latest changes

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -70,7 +70,7 @@
                 <li><span id="resachv3"></span> </li>
               </ul>
             </div>
-            <div class="experience-items">
+           <!-- <div class="experience-items">
               <p>2022 - 2024</p>
               <p><strong> mizu.edit | freelancer</strong></p>
               <p>Video editing and motion graphic</p>
@@ -89,7 +89,7 @@
                 <li>motion graphics</li>
                 <li>graphics design</li>
               </ul>
-            </div>
+            </div>-->
           </section>
 
           <section id="ref" class="refrence">
